...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:src="@drawable/poster_alita" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:maxLines="4"
        android:textSize="20sp"
        android:textStyle="bold"
...
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_score"
        app:layout_constraintTop_toBottomOf="@id/tv_score" />

    <TextView
        android:id="@+id/tv_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/tv_rate_label"
        app:layout_constraintTop_toBottomOf="@id/tv_rate_label"
        tools:text="18+" />
...
