<resources>
    <string name="app_name">Filev</string>
    <string name="title_activity_detail_film">DetailFilmActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview_label">Overview</string>
    <string name="user_score_label">User Score</string>
    <string name="rate_label">Rate</string>
    <string name="movie_label">Movie</string>
    <string name="tv_show_label">TV Show</string>
    <string name="user_score_value">%d / 100</string>
</resources>